# cosbot

./: .gitignore  cosmereapp.py  pyproject.toml  requirements.txt
backend/: core.py
