[project]
name = "cosbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-astradb>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-openai>=1.1.2",
    "streamlit>=1.52.1",
]
